qa/apps/clinical-data/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clinical-data
  name: clinical-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinical-data
  template:
    metadata:
      labels:
        app: clinical-data
    spec:
      imagePullSecrets:
      - name: images-pull
      volumes:
      - name: postgres-ca-certificate
        secret:
          secretName: postgres-qa-ca-certificate
          defaultMode: 0555
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      - name: ca-bundle
        emptyDir: {}
      - name: corefile
        configMap:
          name: coredns-zonefiles-corefile
          defaultMode: 0444
      - name: zonefile
        configMap:
          name: qa-domain-zonefile
          defaultMode: 0444
      - name: zonefile-copy
        emptyDir: {}
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 127.0.0.1
        searches:
        - search
        - cqdg-qa.svc.cluster.qa
        - svc.cluster.qa
        - cluster.qa
        - openstacklocal
        options:
        - name: ndots
          value: "5"
      containers:
      - name: coredns
        image: ferlabcrsj/coredns:1.1.1
        command: ["/coredns"]
        args: ["-conf", "/opt/corefile/Corefile"]
        volumeMounts:
        - name: corefile
          mountPath: /opt/corefile
          readOnly: true
        - name: zonefile-copy
          mountPath: /opt/zonefiles
          readOnly: true
      - image: index.docker.io/ferlabcrsj/cqdg-clinical-data-service:01477def1d85d6f042c0dd8686c90e8a43e1024d-1660917679 # {"$imagepolicy": "cqdg-qa-fluxcd:clinical-data"}
        name: clinical-data
        volumeMounts:
        - name: postgres-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        - name: ca-bundle
          mountPath: /opt/ca-bundle
          readOnly: true
        resources:
          requests:
            memory: "4GiB"
            cpu: '1.0'
          limits:
            memory: "4GiB"
            cpu: '2.0'
