qa/apps/clinical-data/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clinical-data
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - clinical-data-api.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: clinical-data-api.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clinical-data
            servicePort: 4000
